--- a/manifest.yml
+++ b/manifest.yml
@@ -1,12 +1,12 @@
 ---
 # This manifest deploys a Python Flask application with a Redis database
 applications:
-- name: nyu-lab-bluemix
+- name: nyu-bluemix-cf
   memory: 64M
-  instances: 2
+  instances: 1
   timeout: 180
   #random-route: true
-  host: nyu-lab-bluemix
+  host: nyu-bluemix-cf-sl
   domain: mybluemix.net
   path: .
   disk_quota: 1024M
